chore: deepen success stories and faq guidance

--- a/index.html
+++ b/index.html
@@ -555,6 +555,19 @@
             line-height: 1.8;
         }
 
+        .faq-answer ul {
+            margin: 0.6rem 0 0;
+            padding-left: 1.2rem;
+        }
+
+        .faq-answer li {
+            margin-bottom: 0.4rem;
+        }
+
+        .faq-answer li:last-child {
+            margin-bottom: 0;
+        }
+
         .about-preview {
             padding: 4.5rem 2rem;
             background: var(--white);
@@ -776,6 +789,26 @@
         .story-detail {
             font-size: 0.9rem;
             color: var(--gray);
+        }
+
+        .story-insight {
+            background: var(--light-gray);
+            border-radius: 12px;
+            padding: 0.9rem 1rem;
+            color: var(--gray);
+        }
+
+        .story-insight ul {
+            margin: 0;
+            padding-left: 1.2rem;
+        }
+
+        .story-insight li {
+            margin-bottom: 0.45rem;
+        }
+
+        .story-insight li:last-child {
+            margin-bottom: 0;
         }
 
         .story-card blockquote {
@@ -1348,6 +1381,12 @@
                             </div>
                         </div>
                         <p>把“再刷一会儿”改写成“我选择清醒”，脚本让大脑在几周内习惯主动停下。我不再靠外部刺激入睡，注意力重新回到自己手里。</p>
+                        <div class="story-insight">
+                            <ul>
+                                <li>第 7 天起记录诱因，午休前先做 3 次深呼吸。</li>
+                                <li>第 14 天开始不再自动拿起手机看直播，夜间入睡更快。</li>
+                            </ul>
+                        </div>
                     </article>
                     <article class="story-card">
                         <div class="story-header">
@@ -1358,6 +1397,12 @@
                             </div>
                         </div>
                         <p>他在课程里提醒我们：最有说服力的声音是自己的声音。把想法写下来、念出来、听进去，是最省成本、却能持续的自我重写方式。</p>
+                        <div class="story-insight">
+                            <ul>
+                                <li>提倡“写-念-听”循环，让认知与身体一起被说服。</li>
+                                <li>他把自语力的脚本当作每日例行公事，像刷牙一样不可或缺。</li>
+                            </ul>
+                        </div>
                     </article>
                     <article class="story-card">
                         <div class="story-header">
@@ -1368,6 +1413,12 @@
                             </div>
                         </div>
                         <p>照着脚本记录触发点，把“我想抽”换成“我在恢复肺活量”，十年的烟瘾被拆解成每天的小决定，没有经历撕裂式的戒断焦虑。</p>
+                        <div class="story-insight">
+                            <ul>
+                                <li>21 天内完成 60+ 次自我对话，触发时先写再回应。</li>
+                                <li>把“饭后抽一根”换成 5 分钟走动 + 深呼吸，戒断峰值明显降低。</li>
+                            </ul>
+                        </div>
                     </article>
                 </div>
             </section>
@@ -1376,15 +1427,41 @@
                 <div class="faq-container">
                     <div class="faq-item">
                         <h3 class="faq-question">如果我只有零散的时间，还能坚持 21 天吗？</h3>
-                        <p class="faq-answer">可以。每个脚本平均用时 5～8 分钟：读一段对话、写一句回应、执行一个微动作。很多用户把早晚各一次的对话安排在刷牙或通勤前后，零碎时间照样能完成。</p>
+                        <div class="faq-answer">
+                            可以。每个脚本平均用时 5～8 分钟：读一段对话、写一句回应、执行一个微动作。很多用户把练习嵌入既有习惯里：
+                            <ul>
+                                <li>早晨刷牙后朗读当日对话。</li>
+                                <li>午休前写下一句“我想要的状态”。</li>
+                                <li>晚上复盘时完成替代动作或拉伸。</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">如果中途出现反复怎么办？</h3>
-                        <p class="faq-answer">脚本里有“复盘日”与“补救日”，帮助你识别诱因并写下下一次的替代方案。实在卡住时，直接发邮件到 selftalkernow@outlook.com，我会和你一起拆解下一步。</p>
+                        <div class="faq-answer">
+                            脚本里安排了“复盘日”与“补救日”，帮助你识别诱因并写下下一次的替代方案。
+                            <ul>
+                                <li>先记录诱因，写下当时的身体感觉与真实需求。</li>
+                                <li>用新的自我对话覆盖原本的自动反应。</li>
+                                <li>写信到 <a href="mailto:selftalkernow@outlook.com">selftalkernow@outlook.com</a>，我会与你一起拆解。</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">开始前需要准备什么？</h3>
+                        <div class="faq-answer">
+                            很简单，准备一支笔和一个你常用的记录空间（纸本或电子皆可）。如果要戒烟/戒酒，建议提前告知身边会影响你的朋友，争取他们的理解。
+                        </div>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">我需要配合其他工具或药物吗？</h3>
-                        <p class="faq-answer">不强求。自语力专注在“预测与反应”的对话训练，若你在戒烟或戒酒阶段需要专业协助，可以把脚本与医生、治疗师的建议结合，这样成功率更高。</p>
+                        <div class="faq-answer">
+                            不强求。自语力专注在“预测与反应”的对话训练：
+                            <ul>
+                                <li>若你搭配运动、正念或戒烟贴片，脚本可以与它们协同。</li>
+                                <li>在医疗方案进行中，也能把每日对话带给医生/治疗师，作为追踪依据。</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -1590,6 +1667,12 @@
                             </div>
                         </div>
                         <p>I rewrote “just one more clip” into “I choose clarity.” The daily dialogue let cravings fade without the usual emotional crash.</p>
+                        <div class="story-insight">
+                            <ul>
+                                <li>By day 7 I logged every trigger and reset with three rounds of 4-4-6 breathing.</li>
+                                <li>From day 14 onward I could fall asleep without background streams.</li>
+                            </ul>
+                        </div>
                     </article>
                     <article class="story-card">
                         <div class="story-header">
@@ -1600,6 +1683,12 @@
                             </div>
                         </div>
                         <p>He keeps repeating this in his workshops: the voice you trust most is your own. Write it, say it, hear it—self-talk is the cheapest, stickiest CBT-style practice.</p>
+                        <div class="story-insight">
+                            <ul>
+                                <li>Promotes the “write–speak–listen” loop so cognition and emotion align.</li>
+                                <li>Uses SelfTalk scripts as a daily ritual, just like brushing his teeth.</li>
+                            </ul>
+                        </div>
                     </article>
                     <article class="story-card">
                         <div class="story-header">
@@ -1610,6 +1699,12 @@
                             </div>
                         </div>
                         <p>He logged every trigger, replaced “I need a cigarette” with “I’m rebuilding my lungs,” and walked away from a decade-long habit without intense withdrawal.</p>
+                        <div class="story-insight">
+                            <ul>
+                                <li>Completed 60+ dialogues in 21 days, writing before reacting each time.</li>
+                                <li>Swapped the “one cigarette after meals” loop with a five-minute walk and breathwork.</li>
+                            </ul>
+                        </div>
                     </article>
                 </div>
             </section>
@@ -1618,15 +1713,41 @@
                 <div class="faq-container">
                     <div class="faq-item">
                         <h3 class="faq-question">What if I only have a few minutes each day?</h3>
-                        <p class="faq-answer">That’s enough. Each script takes roughly 5–8 minutes: read the dialogue, jot one sentence, perform a tiny action. Most people stack it onto existing routines—before coffee, after brushing teeth, or during a commute pause.</p>
+                        <div class="faq-answer">
+                            That’s enough. Each script takes roughly 5–8 minutes. Most people layer the practice onto existing routines:
+                            <ul>
+                                <li>Read the dialogue right after brushing your teeth.</li>
+                                <li>Write a one-sentence reminder before your afternoon break.</li>
+                                <li>Do the replacement action while winding down at night.</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">What happens when I slip?</h3>
-                        <p class="faq-answer">Relapses are part of the plan. The script includes “reset days” that help you analyse triggers and decide your backup dialogue. If you’re stuck, email selftalkernow@outlook.com—we’ll map your next move together.</p>
+                        <div class="faq-answer">
+                            Relapses are part of the process. The script includes reset days to help you regroup:
+                            <ul>
+                                <li>Log the trigger and how it felt in your body.</li>
+                                <li>Rewrite the internal response you want next time.</li>
+                                <li>Email <a href="mailto:selftalkernow@outlook.com">selftalkernow@outlook.com</a> and we’ll troubleshoot together.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">What should I prepare before starting?</h3>
+                        <div class="faq-answer">
+                            Keep a notebook or notes app handy for daily writing, and let close friends know you’re running a 21-day experiment—social cues help you stay accountable.
+                        </div>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">Do I need extra tools or medication?</h3>
-                        <p class="faq-answer">Not required. SelfTalk focuses on rewiring predictions through deliberate dialogue. If you’re working with a doctor or therapist (for quitting smoking or drinking), bring the script along—it complements professional guidance well.</p>
+                        <div class="faq-answer">
+                            Not required. SelfTalk focuses on rewiring predictions through deliberate dialogue.
+                            <ul>
+                                <li>If you pair it with exercise, mindfulness, or nicotine patches, the script reinforces those routines.</li>
+                                <li>If you’re in a medical program, share the dialogue with your doctor/therapist as part of the progress check-in.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
