chore: label faq categories for clarity

--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@
             <section class="faq-section" id="faq">
                 <div class="faq-container">
                     <div class="faq-item">
-                        <h3 class="faq-question">如果我只有零散的时间，还能坚持 21 天吗？</h3>
+                        <h3 class="faq-question">📅 日常安排</h3>
                         <div class="faq-answer">
                             可以。每个脚本平均用时 5～8 分钟：读一段对话、写一句回应、执行一个微动作。很多用户把练习嵌入既有习惯里：
                             <ul>
@@ -1437,7 +1437,7 @@
                         </div>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-question">如果中途出现反复怎么办？</h3>
+                        <h3 class="faq-question">🔁 面对复发</h3>
                         <div class="faq-answer">
                             脚本里安排了“复盘日”与“补救日”，帮助你识别诱因并写下下一次的替代方案。
                             <ul>
@@ -1448,13 +1448,13 @@
                         </div>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-question">开始前需要准备什么？</h3>
+                        <h3 class="faq-question">🛠 开始前准备</h3>
                         <div class="faq-answer">
                             很简单，准备一支笔和一个你常用的记录空间（纸本或电子皆可）。如果要戒烟/戒酒，建议提前告知身边会影响你的朋友，争取他们的理解。
                         </div>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-question">我需要配合其他工具或药物吗？</h3>
+                        <h3 class="faq-question">🧰 配合其他工具</h3>
                         <div class="faq-answer">
                             不强求。自语力专注在“预测与反应”的对话训练：
                             <ul>
@@ -1712,7 +1712,7 @@
             <section class="faq-section" id="faq-en">
                 <div class="faq-container">
                     <div class="faq-item">
-                        <h3 class="faq-question">What if I only have a few minutes each day?</h3>
+                        <h3 class="faq-question">📅 Daily rhythm</h3>
                         <div class="faq-answer">
                             That’s enough. Each script takes roughly 5–8 minutes. Most people layer the practice onto existing routines:
                             <ul>
@@ -1723,7 +1723,7 @@
                         </div>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-question">What happens when I slip?</h3>
+                        <h3 class="faq-question">🔁 Handling relapses</h3>
                         <div class="faq-answer">
                             Relapses are part of the process. The script includes reset days to help you regroup:
                             <ul>
@@ -1734,13 +1734,13 @@
                         </div>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-question">What should I prepare before starting?</h3>
+                        <h3 class="faq-question">🛠 Before you begin</h3>
                         <div class="faq-answer">
                             Keep a notebook or notes app handy for daily writing, and let close friends know you’re running a 21-day experiment—social cues help you stay accountable.
                         </div>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-question">Do I need extra tools or medication?</h3>
+                        <h3 class="faq-question">🧰 Tools & medication</h3>
                         <div class="faq-answer">
                             Not required. SelfTalk focuses on rewiring predictions through deliberate dialogue.
                             <ul>
