feat: add faq anchor to site navigation

--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,7 @@
             <div class="nav-links">
                 <a href="#how" data-text-zh="如何运作" data-text-en="How It Works" data-href-zh="#how" data-href-en="#how-en">How It Works</a>
                 <a href="#stories" data-text-zh="成功故事" data-text-en="Success Stories" data-href-zh="#stories" data-href-en="#stories-en">Success Stories</a>
+                <a href="#faq" data-text-zh="常见问题" data-text-en="FAQ" data-href-zh="#faq" data-href-en="#faq-en">FAQ</a>
                 <a href="#about" data-text-zh="关于我" data-text-en="About Me" data-href-zh="#about" data-href-en="#about-en">About Me</a>
                 <a href="/start" class="cta-button" data-text-zh="开始改变" data-text-en="Start Now">Start Now</a>
             </div>
@@ -1828,12 +1829,14 @@
                 ? {
                     '#how-en': '#how',
                     '#stories-en': '#stories',
+                    '#faq-en': '#faq',
                     '#about-en': '#about',
                     '#journey-en': '#journey'
                 }
                 : {
                     '#how': '#how-en',
                     '#stories': '#stories-en',
+                    '#faq': '#faq-en',
                     '#about': '#about-en',
                     '#journey': '#journey-en'
                 };
