--- a/start/index.html
+++ b/start/index.html
@@ -964,6 +964,7 @@
                 <a href="/" data-text-zh="首页" data-text-en="Home">Home</a>
                 <a href="/#how" data-text-zh="如何运作" data-text-en="How It Works">How It Works</a>
                 <a href="/#stories" data-text-zh="成功故事" data-text-en="Success Stories">Success Stories</a>
+                <a href="/#faq" data-text-zh="常见问题" data-text-en="FAQ">FAQ</a>
                 <a href="/about" data-text-zh="关于我" data-text-en="About Me">About Me</a>
                 <a href="/start" class="cta-button active" data-text-zh="开始改变" data-text-en="Start Now">Start Now</a>
             </div>
