chore: collapse success stories and add insights links

--- a/index.html
+++ b/index.html
@@ -1570,13 +1570,16 @@
                                 <span class="story-detail">21 天告别直播与短视频</span>
                             </div>
                         </div>
-                        <p>把“再刷一会儿”改写成“我选择清醒”，脚本让大脑在几周内习惯主动停下。我不再靠外部刺激入睡，注意力重新回到自己手里。</p>
-                        <div class="story-insight">
+                        <p>把“再刷一会儿”改写成“我选择清醒”，脚本在几周内让我的大脑习惯主动停下。</p>
+                        <details class="story-insight">
+                            <summary>展开完整故事</summary>
                             <ul>
                                 <li>第 7 天起记录诱因，午休前先做 3 次深呼吸。</li>
                                 <li>第 14 天开始不再自动拿起手机看直播，夜间入睡更快。</li>
+                                <li>第 21 天录下最有效的对话，作为后续强化素材。</li>
                             </ul>
-                        </div>
+                            <a class="primary-link" href="/insights">去文章页阅读更多</a>
+                        </details>
                     </article>
                     <article class="story-card">
                         <div class="story-header">
@@ -1586,13 +1589,16 @@
                                 <span class="story-detail">作者 & 投资人</span>
                             </div>
                         </div>
-                        <p>他在课程里提醒我们：最有说服力的声音是自己的声音。把想法写下来、念出来、听进去，是最省成本、却能持续的自我重写方式。</p>
-                        <div class="story-insight">
+                        <p>他提醒我：最有说服力的声音是自己的声音，写念听循环是最省成本的改变方式。</p>
+                        <details class="story-insight">
+                            <summary>展开完整故事</summary>
                             <ul>
                                 <li>提倡“写-念-听”循环，让认知与身体一起被说服。</li>
-                                <li>他把自语力的脚本当作每日例行公事，像刷牙一样不可或缺。</li>
+                                <li>把脚本当作每日例行公事，就像刷牙一样不可或缺。</li>
+                                <li>他鼓励我们录音回放，让“自我声音”成为稳定的输入。</li>
                             </ul>
-                        </div>
+                            <a class="primary-link" href="/insights">去文章页阅读更多</a>
+                        </details>
                     </article>
                     <article class="story-card">
                         <div class="story-header">
@@ -1602,13 +1608,16 @@
                                 <span class="story-detail">34 岁 · 21 天戒烟</span>
                             </div>
                         </div>
-                        <p>照着脚本记录触发点，把“我想抽”换成“我在恢复肺活量”，十年的烟瘾被拆解成每天的小决定，没有经历撕裂式的戒断焦虑。</p>
-                        <div class="story-insight">
+                        <p>把“我想抽”换成“我在恢复肺活量”，十年的烟瘾被拆解成每天的小决定。</p>
+                        <details class="story-insight">
+                            <summary>展开完整故事</summary>
                             <ul>
                                 <li>21 天内完成 60+ 次自我对话，触发时先写再回应。</li>
                                 <li>把“饭后抽一根”换成 5 分钟走动 + 深呼吸，戒断峰值明显降低。</li>
+                                <li>复发时参考“补救日”脚本，第二天快速拉回节奏。</li>
                             </ul>
-                        </div>
+                            <a class="primary-link" href="/insights">去文章页阅读更多</a>
+                        </details>
                     </article>
                 </div>
             </section>
@@ -1920,13 +1929,16 @@
                                 <span class="story-detail">21 days free from late-night streaming</span>
                             </div>
                         </div>
-                        <p>I rewrote “just one more clip” into “I choose clarity.” The daily dialogue let cravings fade without the usual emotional crash.</p>
-                        <div class="story-insight">
+                        <p>I rewrote “just one more clip” into “I choose clarity.” Cravings faded without the usual crash.</p>
+                        <details class="story-insight">
+                            <summary>Expand full story</summary>
                             <ul>
                                 <li>By day 7 I logged every trigger and reset with three rounds of 4-4-6 breathing.</li>
                                 <li>From day 14 onward I could fall asleep without background streams.</li>
+                                <li>Recorded the strongest dialogue on day 21 and replayed it during future habit shifts.</li>
                             </ul>
-                        </div>
+                            <a class="primary-link" href="/insights">See article updates</a>
+                        </details>
                     </article>
                     <article class="story-card">
                         <div class="story-header">
@@ -1936,13 +1948,16 @@
                                 <span class="story-detail">Entrepreneur & author</span>
                             </div>
                         </div>
-                        <p>He keeps repeating this in his workshops: the voice you trust most is your own. Write it, say it, hear it—self-talk is the cheapest, stickiest CBT-style practice.</p>
-                        <div class="story-insight">
+                        <p>He reminds us: your own voice persuades best. The write-speak-listen loop is a low-cost change protocol.</p>
+                        <details class="story-insight">
+                            <summary>Expand full story</summary>
                             <ul>
                                 <li>Promotes the “write–speak–listen” loop so cognition and emotion align.</li>
                                 <li>Uses SelfTalk scripts as a daily ritual, just like brushing his teeth.</li>
+                                <li>Encourages recording your own voice for consistent reinforcement.</li>
                             </ul>
-                        </div>
+                            <a class="primary-link" href="/insights">See article updates</a>
+                        </details>
                     </article>
                     <article class="story-card">
                         <div class="story-header">
@@ -1952,13 +1967,16 @@
                                 <span class="story-detail">34 · 21 days smoke-free</span>
                             </div>
                         </div>
-                        <p>He logged every trigger, replaced “I need a cigarette” with “I’m rebuilding my lungs,” and walked away from a decade-long habit without intense withdrawal.</p>
-                        <div class="story-insight">
+                        <p>He replaced “I need a cigarette” with “I’m rebuilding my lungs,” walking away from a decade-long habit.</p>
+                        <details class="story-insight">
+                            <summary>Expand full story</summary>
                             <ul>
                                 <li>Completed 60+ dialogues in 21 days, writing before reacting each time.</li>
                                 <li>Swapped the “one cigarette after meals” loop with a five-minute walk and breathwork.</li>
+                                <li>Used reset-day scripts whenever relapse happened to recover momentum quickly.</li>
                             </ul>
-                        </div>
+                            <a class="primary-link" href="/insights">See article updates</a>
+                        </details>
                     </article>
                 </div>
             </section>
